--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
   </head>
   <body class="layout-admin aside-sticky header-sticky">
     <div id="wrapper" class="d-flex align-items-stretch flex-column">
+      <app>Loading...</app>
       <app-root></app-root>
     </div><!-- /#wrapper -->
   </body>
