--- a/src/index.html
+++ b/src/index.html
@@ -33,5 +33,6 @@
     <div id="wrapper" class="d-flex align-items-stretch flex-column">
       <app-root></app-root>
     </div><!-- /#wrapper -->
+    <script src="assets/js/core.min.js"></script>
   </body>
 </html>
